# ChangeLog for sys-devel/binutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.359 2009/06/01 20:13:11 vapier Exp $

*binutils-2.19.51.0.7 (01 Jun 2009)

  01 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.7.ebuild:
  Version bump.

*binutils-2.19.51.0.6 (30 May 2009)

  30 May 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.6.ebuild:
  Version bump.

  26 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  binutils-2.19.51.0.5.ebuild:
  Update patchlevel to pick up the new patch to update ld(1) wrt
  --enable-new-dtags.

*binutils-2.19.51.0.5 (26 May 2009)

  26 May 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.5.ebuild:
  Version bump.

  14 May 2009; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Set proper expectations for the gold linker.

  09 May 2009; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add new USE=gold flag #266282 by Dror Levin.

*binutils-2.19.51.0.4 (09 May 2009)

  09 May 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.4.ebuild:
  Version bump #267297 by Arfrever Frehtes Taifersar Arahesis.

*binutils-2.19.1-r1 (14 Mar 2009)

  14 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.1-r1.ebuild:
  Add strip fixes from upstream for #183725 by Harald van Dijk and #257783
  by Alexey Shvetsov and Raúl Porcel.

*binutils-2.19.51.0.3 (10 Mar 2009)

  10 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.3.ebuild:
  Version bump.

*binutils-2.19.51.0.2 (05 Feb 2009)

  05 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.2.ebuild:
  Version bump.

*binutils-2.19.1 (05 Feb 2009)

  05 Feb 2009; Mike Frysinger <vapier@gentoo.org> +binutils-2.19.1.ebuild:
  Version bump.

*binutils-2.19.51.0.1 (10 Jan 2009)

  10 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.1.ebuild:
  Version bump.
