@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX binutils-configure-LANG.patch 2082 RMD160 ac49fd3d0053d1a330e810a1f02c80f6f8fe5e8e SHA1 452e586e1a6ca5885420f947df46004a91d4aecd SHA256 316f75980bfcccc306bd466d72d0e20a0ac327b8b7642fa2e3cf8d95d65f24d6
 DIST binutils-2.15-patches-1.3.tar.bz2 182009 RMD160 142d63eee4e0251d2dab3f8fe44b146a19f46e10 SHA1 a6501bada900bdbecb4e5ced3f6bf4d8d2a9d0cc SHA256 cfaa43a922497eaa764b53f198870653e33eb9913a15205ab0c4917097935205
 DIST binutils-2.15.tar.bz2 11515075 RMD160 62b50a0033e5b491b587b77df304eb28bc52a6ba SHA1 9ac6e47be8cd78385d3d5e09c6bb420e357c4c07 SHA256 ec064e693aad821f0fb942d6da59f7f6b5d1d99e3cc100514af837deb3940d24
@@ -43,6 +46,8 @@ DIST binutils-2.19.51.0.6-patches-1.0.tar.bz2 7234 RMD160 bad1b3ccd8f0fa77894d51
 DIST binutils-2.19.51.0.6.tar.bz2 15801649 RMD160 110700578968188979175163fa31f88358141063 SHA1 8efb5fd37419e208c44d25f461c2dcda289ae2b7 SHA256 0ed794528175298f609cf4392c5761e9bcbf3e5600b4bc967d5a6390e844b318
 DIST binutils-2.19.51.0.7-patches-1.0.tar.bz2 7242 RMD160 3339612c29c890dbf8c0e25f18d733a20daba7c0 SHA1 68f4f17788d4cae0e252916aad5cdf694103bc83 SHA256 2aa13713f11b7dc768f53c402c8260d97cb1e456ba0e2dff855d4c8a6c2b3dd1
 DIST binutils-2.19.51.0.7.tar.bz2 15797920 RMD160 73af9b141d0c8bfefb0fca34c0bd83eb30eb598e SHA1 1263f936badd68a70ebeab9b4a8fb4a9423db742 SHA256 683c89de15f7ffd93914d709483ba4c13b3a2099a1bece896d68e9330e37a841
+DIST binutils-2.19.51.0.8-patches-1.0.tar.bz2 7235 RMD160 4b615793b8e2f67955a349d2512c903684debeeb SHA1 c2259303c90118922a4ac11207eaa598f187a17d SHA256 18a5fe772e16733382fb63ed43e068d49483ebc8747e0573fea5fa14ad0d39d7
+DIST binutils-2.19.51.0.8.tar.bz2 15796254 RMD160 4a20565e9953211ad0332b9af3867169177d727c SHA1 6e4f29a98172c8bc5f10adcea286195fbabebc6c SHA256 987db3733a62520dfc367fe3bca64888ce7eb7052488ee10ba9a33bf01947ed1
 DIST binutils-2.19.tar.bz2 16219400 RMD160 1d5e234e22dbd9cd126ccfd685bf5700dc36ad1a SHA1 a150b97ec47996bf8f01d6bc14d41587faa4bbff SHA256 bd2ea10ffc2bf62a917b05f4fbe3d02212589c2bc177fa0c51a9c874d3da528a
 EBUILD binutils-2.15.ebuild 566 RMD160 13208be237816db77d812228932f090cdbc7e0b9 SHA1 a92d3448cba3849182ad3a1abad8ca061e80ad3e SHA256 999f1596f0110f427c67976a01b98ec03ef26ebf68665291daa80b2f7226a24b
 EBUILD binutils-2.16.1-r3.ebuild 612 RMD160 27702f2afcf29fd144162e59ea97a32b68f3f426 SHA1 70399d134a014991b2c9682e07494886f1000a04 SHA256 be737d5d5908eeeb11a431c01324f75a0900a98a673e6961afafb6ee081e7b05
@@ -67,6 +72,14 @@ EBUILD binutils-2.19.51.0.4.ebuild 299 RMD160 8cc189f3be972659bd1b6fc186a479878e
 EBUILD binutils-2.19.51.0.5.ebuild 302 RMD160 f27d7ff03aca3ff03f1b8b088fd0c0fd0bebb008 SHA1 f1bae5312f14282af6720d611c3c901dd99bd318 SHA256 d0ec73aaaeb065a7513248045e7547195f810d0b7c435abb43d8f7bb9a3aada1
 EBUILD binutils-2.19.51.0.6.ebuild 299 RMD160 1c39ebd5532ba7ab9be0c8d09fd27129a41079fe SHA1 e03ae1450e961e439d461f481568668dc847b923 SHA256 553f804a0ee9b4f1152209e474c415328d0983dbd08e99dffa4af704c213c965
 EBUILD binutils-2.19.51.0.7.ebuild 299 RMD160 3012c361eee6cc369c562db2af1932c6afdc5a67 SHA1 a169783223b9a13dcdcec469f3d173ec64d61b04 SHA256 98a7717291cde14dbffd3dd3fb7af12d7f5f955bc6ab3b3417d5a683d0f707b7
+EBUILD binutils-2.19.51.0.8.ebuild 299 RMD160 2affe578821b7d55cbfb588032dcce625a046688 SHA1 56d5a51cb6b8429e795b7e2a199ba6ebefb42aea SHA256 f7c8daf1c1fc27e784347c364bfd5ed69340e2a1f96ce01805024474b5507e89
 EBUILD binutils-2.19.ebuild 386 RMD160 6e7ad705e5720e519c002c02589b9c1e2dd547ac SHA1 24b9bbe9628c4f6823948aa71cbd11783c9c333c SHA256 957424098c472973041d625b348ec120a630f5785d4bfb0df6c6ad8788667bb5
-MISC ChangeLog 62571 RMD160 5a3feb257fa7506fc0d294c2d0d9fcd4a82bd809 SHA1 440da71c5a66acce74301941693ab38b811622b4 SHA256 6479f0694ff46b154135c10293c7b52f531b47b195c2bde414e0ab275dc8e4e5
+MISC ChangeLog 62707 RMD160 9650898e0419fac6b0e683569b35478676282b9b SHA1 035f8fc2f3dab6caa6053f89f558f4e68fc628f7 SHA256 e003ed6e391fc6649f5f725a52e2e8ff5c2604c071671e1240cf7ddf2d6122da
 MISC metadata.xml 511 RMD160 84535ecd31e21020a41f3d173a294f03c5951da0 SHA1 1a40f6d427a9e3b64a15967b9b442d8cd65d40bb SHA256 ceac2610b009f7a25946ad186496cb7d761a495820ed6b67be9b560dda223c39
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkom/3UACgkQn/5bYzqsSmFKJwCgjVmOfDXz0RSPPVjCyrB/1P/u
+FyIAn07Pm5TmQLhPAtrwnhJ+Cwh6k9ew
+=kwnC
+-----END PGP SIGNATURE-----
